# agl

./: .gitignore  :w  CMakeLists.txt  Doxyfile  LICENSE  README.md  cpplint.py  release.sh
.github/workflows/: cmake-linux.yml  cmake-windows.yml  cmake.yml
agl/: AGL.h  AGLM.cpp  AGLM.h  CMakeLists.txt  aglm.cpp  aglm.h  camera.cpp  camera.h  image.cpp  image.h  line_mesh.cpp  material.h  mesh.cpp  mesh.h  particlesystem.cpp  particlesystem.h  point_mesh.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  trail.cpp  trail.h  triangleMesh.cpp  triangleMesh.h  triangle_mesh.cpp  triangle_mesh.h  window.cpp  window.h
agl/mesh/: CPPLINT.cfg  capsule.cpp  capsule.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  line_mesh.cpp  line_mesh.h  plane.cpp  plane.h  point_mesh.cpp  point_mesh.h  pyramid.cpp  pyramid.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  teapot.cpp  teapot.h  teapotdata.h  torus.cpp  torus.h  triangle_mesh.cpp  triangle_mesh.h
docs/: Examples.dox  Examples.html  Examples.md  GettingStarted.dox  GettingStarted.md  Reference.dox
docs/html/: Examples.html  _r_e_a_d_m_e_8md.html  agl_8h.html  agl_8h_source.html  aglm_8cpp.html  aglm_8cpp.js  aglm_8h.html  aglm_8h.js  aglm_8h_source.html  annotated.html  annotated_dup.js  camera_8cpp.html  camera_8h.html  camera_8h_source.html  capsule_8h_source.html  classagl_1_1_camera-members.html  classagl_1_1_camera.html  classagl_1_1_camera.js  classagl_1_1_capsule-members.html  classagl_1_1_capsule.html  classagl_1_1_capsule.js  classagl_1_1_cube-members.html  classagl_1_1_cube.html  classagl_1_1_cube.js  classagl_1_1_cylinder-members.html  classagl_1_1_cylinder.html  classagl_1_1_cylinder.js  classagl_1_1_g_l_s_l_program_exception-members.html  classagl_1_1_g_l_s_l_program_exception.html  classagl_1_1_g_l_s_l_program_exception.js  classagl_1_1_image-members.html  classagl_1_1_image.html  classagl_1_1_image.js  classagl_1_1_line_mesh-members.html  classagl_1_1_line_mesh.html  classagl_1_1_line_mesh.js  classagl_1_1_mesh-members.html  classagl_1_1_mesh.html  classagl_1_1_mesh.js  classagl_1_1_plane-members.html  (+154 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+59 more)
examples/: CMakeLists.txt  attractor.cpp  bumpmap.cpp  camera_controls.cpp  checker.cpp  cubemap.cpp  empty.cpp  envmap.cpp  fat_torus.cpp  heightmap.cpp  lines.cpp  particles.cpp  plane.cpp  pushpop.cpp  refract.cpp  render_texture.cpp  rotate.cpp  run.cpp  scale.cpp  screeneffects.cpp  screenshot.cpp  select_drag.cpp  shadertoy.cpp  shadows.cpp  shapes.cpp  solarsystem.cpp  sphere.cpp  sprites.cpp  text.cpp  texture.cpp  transform.cpp  translate.cpp  undulate.cpp  uniforms.cpp
examples/hello-agl/: cubemap.cpp  sphere.cpp  sprites.cpp
examples/simple-mesh/: main.cpp
models/: airplane.ply  simpleSkin.gltf
shaders/: billboard.fs  billboard.vs  bumpmap.fs  bumpmap.vs  cubemap.fs  cubemap.vs  envmap.fs  envmap.vs  glow.fs  line.fs  line.vs  lines.vs  normals.fs  phong.fs  phong.vs  refract.fs  screeneffects.fs  shadertoy.vs  shadertoy_fragCoord.fs  shadertoy_raymarch_csg.fs  shadow.vs  shadowmap-1.fs  shadowmap-1.vs  shadowmap-2.fs  shadowmap-2.vs  text.fs  text.vs  unlit.vs
test/: test-shapes.cpp
textures/: heightfield.tga
